# Proyecto_Sistema_Binario

./: README.md  pyproject.toml
notebooks/: binary_system_laplace.ipynb  binary_system_poisson.ipynb
scripts/: plotters.py  solvers.py
